# Music-Formatter-Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  vcpkg.json
Licenses/: nlohmann_json
Test/: CMakeLists.txt  indexer_tests.cpp
cmake/: TC-mingw.cmake
include/model/: Indexer.h  indexer.h  message_box_sink.h
include/ui/: control.h  gui.h  ui_main.h
include/ui/elements/: control_panel.h  options.h  path_input.h  progress.h
includes/model/: Indexer.h
src/: main.cpp
src/UI/: ui_main.cpp
src/model/: Indexer.cpp  Indexer.h  indexer.cpp
src/ui/: control.cpp  gui.cpp  ui_main.cpp
src/ui/elements/: control_panel.cpp  options.cpp  path_input.cpp  progress.cpp
test/: indexer_tests.cpp
